@@ -466,7 +466,7 @@
 2012-09-12  Shinwoo Kim (kimcinoo)
 
         * Add access features to calendar.
-
+        * Add icon show/hide handling to diskselector ala button etc.
 
 2012-09-12  Thiep Ha
 
